It creates a user [Finishes #181536660]

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev index.ts"
-  },
+    "start": "ts-node-dev index.ts",
+    "postinstall": "$(yarn bin)/pm2 install typescript"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
