--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-async-errors": "^3.1.1",
     "file-url": "^4.0.0",
     "mongoose": "^6.1.7",
+    "rimraf": "^3.0.2",
     "style-object-to-css-string": "^1.0.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
